--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
      <style>
       body {
+        /*
         height: 100vh;
         background-color: black;
         background-image: url('imagens/wallpaper002.jpg');
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;
+        */
+
+        /*
+         Shorthand - background
+         color > image > position > repeat > {size} > attachment
+        */
+
+        background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+        background-size: cover;
       }
        
       main {
         background-color: white;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin: auto;
         border: 1px solid darkblue;
@@ -29,6 +40,14 @@
     <h1>Teste de Imagem do Fundo</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo excepturi autem, fuga fugiat quaerat praesentium delectus repudiandae, eos iure ipsum qui reprehenderit? Quam, accusantium? Laboriosam error excepturi ratione totam aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dignissimos, omnis in autem rerum sint dolorem atque illo. Quaerat aspernatur neque laboriosam, ducimus consectetur commodi voluptates voluptatem numquam dolore facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur adipisci aspernatur asperiores accusantium quidem et cupiditate, sit ad corporis sapiente quaerat ducimus possimus quos corrupti pariatur, optio impedit. Aliquid, in.
     </p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas eius, cumque delectus quam nam enim impedit aut eos excepturi, aspernatur architecto consectetur, maiores adipisci. Veritatis ab quas quam est corporis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae nisi ea ipsum alias et mollitia magni molestias totam reiciendis sit quidem cumque dicta corporis rem labore quibusdam pariatur, velit in! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae similique molestiae eaque dolores, distinctio a sequi deserunt autem enim tenetur vitae, nisi facilis saepe quod eligendi quas? Totam, ullam similique!</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque dignissimos eius eveniet doloremque, harum nemo sunt. Modi deserunt, natus alias rem provident in magni, cumque quasi ducimus totam obcaecati. Commodi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident veritatis libero voluptas? Et dolore fugit quae amet in, nisi, est dignissimos sit excepturi numquam quos suscipit doloremque voluptatem autem mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus tempora, deserunt ab molestiae libero fuga praesentium voluptatibus sit molestias nisi sapiente omnis voluptas reiciendis provident iusto, eligendi consectetur. Reprehenderit, excepturi.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A placeat, earum ad porro quia nihil at aspernatur dignissimos! Optio molestiae voluptate nulla sed maxime vel officia illum, excepturi dolorum dignissimos. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta amet vero, maiores ducimus labore consequuntur molestiae consequatur doloremque nihil deserunt est? Sit blanditiis omnis quos assumenda deleniti officia quod nulla. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nesciunt id ut, ipsam alias quae, praesentium nostrum veritatis ipsa, sequi ex fugit obcaecati! A, nostrum facilis iste quos quis quaerat.</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, hic labore. Id ut soluta, aliquam excepturi itaque atque vel repellendus aliquid! Amet et nihil deserunt! Perferendis doloribus sapiente doloremque nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae molestiae sapiente accusantium laboriosam, quidem consequatur blanditiis? Omnis repudiandae nobis incidunt sint? Ea recusandae autem ducimus, blanditiis perferendis fugit nisi ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, optio fuga? Quasi magni voluptate beatae. Numquam et tempora aut voluptate hic? Reprehenderit deleniti sequi totam nam nulla suscipit voluptas quia.</p>
 
 
 
