--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -11,6 +11,7 @@
     <!-- 
     Anatomia para tableas grandes
     TABLE
+        CAPTION
          THEAD 
          TR, TD, TH
          TBODY
@@ -20,10 +21,11 @@
     -->
 
     <table>
+      <caption>População das Unidades Federativas</caption>
        <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
        </thead>
 
@@ -169,7 +171,7 @@
 
     <tfoot>
         <tr>
-            <th>Total de Habitantes</th>
+            <th scope="row">Total de Habitantes</th>
             <td class="num"><strong>203 062 512</strong></td>
     
          </tr>
