--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -10,7 +10,9 @@
     <h1> Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime velit aliquam fuga molestiae distinctio eius voluptate odit, itaque tempora? Perspiciatis, voluptatem. Quibusdam sequi ipsum voluptates dolores ea! Dolore, reiciendis?</p>
 
-    <iframe src="pag001.html" frameborder="0"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0">
+        <p> Infelizemnte seu navegador não é compatível com isso!</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo accusantium vero facere soluta doloribus deleniti sequi corporis rem totam nesciunt non ad, ut iusto voluptatibus ullam. Ullam a vitae totam?</p>
 </body>
