--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -21,7 +21,7 @@
 
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quasi quae cum illo nulla, beatae laborum dicta enim error inventore, ducimus earum excepturi omnis quos distinctio reprehenderit modi iure libero. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt ullam modi provident doloribus nostrum vel sit, in iste error qui minima totam dicta, accusamus laboriosam, veritatis enim? Beatae, doloremque natus.</p>
 
-     <iframe id="tela" name="frame" src="" > Infelizemnte seu navegador não é compativel com isso.</iframe>
+     <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vero, fugit consequuntur assumenda, mollitia eveniet repellat, ab quam unde dolores est hic quod eos. Unde excepturi voluptas beatae molestiae non! </p> <img src='imagens/Faetec200.png'>">Infelizemnte seu navegador não é compativel com isso.</iframe>
 
      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis excepturi a in sequi expedita ducimus dignissimos quasi architecto, doloribus fugiat sunt accusantium eveniet quas beatae iste debitis. Aliquid, repudiandae fugiat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto alias maxime recusandae, autem non ullam voluptatum cum quae animi minima odit obcaecati ad amet? Alias dolore rem perspiciatis placeat itaque?</p>
 </body>
