--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -23,6 +23,7 @@
 
      <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vero, fugit consequuntur assumenda, mollitia eveniet repellat, ab quam unde dolores est hic quod eos. Unde excepturi voluptas beatae molestiae non! </p> <img src='imagens/Faetec200.png'>">Infelizemnte seu navegador não é compativel com isso.</iframe>
 
-     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis excepturi a in sequi expedita ducimus dignissimos quasi architecto, doloribus fugiat sunt accusantium eveniet quas beatae iste debitis. Aliquid, repudiandae fugiat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto alias maxime recusandae, autem non ullam voluptatum cum quae animi minima odit obcaecati ad amet? Alias dolore rem perspiciatis placeat itaque?</p>
+     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis excepturi a in sequi expedita ducimus dignissimos quasi architecto, doloribus fugiat sunt accusantium eveniet quas beatae iste debitis. Aliquid, repudiandae fugiat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto alias maxime recusandae, autem non ullam voluptatum cum quae animi minima odit obcaecati ad amet? Alias dolore rem perspiciatis placeat itaque?</p> 
+     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi repellat nulla sint culpa iusto at impedit aperiam rem laborum voluptatibus fuga eligendi unde consequatur sequi laboriosam natus, possimus assumenda blanditiis?</p>
 </body>
 </html>
